WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104953
[chromium] Small fixes for WebPluginContainer::setWebLayer
https://bugs.webkit.org/show_bug.cgi?id=104953
Summary
[chromium] Small fixes for WebPluginContainer::setWebLayer
Antoine Labour
Reported
2012-12-13 14:24:24 PST
[chromium] Small fixes for WebPluginContainer::setWebLayer
Attachments
Patch
(3.56 KB, patch)
2012-12-13 14:27 PST
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Labour
Comment 1
2012-12-13 14:27:21 PST
Created
attachment 179336
[details]
Patch
Antoine Labour
Comment 2
2012-12-13 14:27:56 PST
Sorry James, I missed a couple of things in the previous patch...
James Robinson
Comment 3
2012-12-13 14:36:25 PST
Comment on
attachment 179336
[details]
Patch Mmm! Indeed
WebKit Review Bot
Comment 4
2012-12-13 15:22:55 PST
Comment on
attachment 179336
[details]
Patch Clearing flags on attachment: 179336 Committed
r137663
: <
http://trac.webkit.org/changeset/137663
>
WebKit Review Bot
Comment 5
2012-12-13 15:22:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug