[chromium] Small fixes for WebPluginContainer::setWebLayer https://bugs.webkit.org/show_bug.cgi?id=104953

Reviewed by James Robinson.

Source/WebKit/chromium:

* src/WebPluginContainerImpl.cpp:
(WebKit::WebPluginContainerImpl::~WebPluginContainerImpl): Allow
WebPlugin to clean up dangling pointers.

Tools:

* DumpRenderTree/chromium/TestRunner/src/WebTestPlugin.cpp: Clean up
dangling pointers, force correct invalidation of the layer.


Canonical link: https://commits.webkit.org/123192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137663 268f45cc-cd09-0410-ab3c-d52691b4dbfc